--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,9 @@ body {
 }
 
 .App {
-  background-color: yellow;
+  /* background-color: yellow; */
   min-height: calc(100vh - 56px - 40px);
   margin-top: 56px;
   margin-bottom: 40px;
+  padding: 0;
 }
