--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
 }
 
 .App {
-  /* background-color: yellow; */
+  background-color: #eee;
   min-height: calc(100vh - 56px - 40px);
   margin-top: 56px;
   margin-bottom: 40px;
