--- a/src/components/guesse-world/GuesseWord.styles.scss
+++ b/src/components/guesse-world/GuesseWord.styles.scss
@@ -1,5 +1,6 @@
 .guesse-world {
   font-size: 1.4rem;
+  letter-spacing: 2px;
 
   @media(min-width: 360px) {
     font-size: 1.6rem;
@@ -8,5 +9,6 @@
 
   @media(min-width: 1024px) {
     font-size: 2rem;
+    letter-spacing: 4px;
   }
 }
