add media queries to .restart-button

--- a/src/components/restart-button/RestartButton.styles.scss
+++ b/src/components/restart-button/RestartButton.styles.scss
@@ -7,6 +7,18 @@
   background-color: darkgrey;
   transition: background-color .2s;
 
+  @media(min-width: 360px) {
+    font-size: 1.4rem;
+    margin: 1.2rem;
+  }
+
+  @media(min-width: 1024px) {
+    font-size: 1.6rem;
+    padding: 0.4rem 0.8rem;
+    margin: 1.4rem;
+    border-radius: 10px;
+  }
+
   &:hover {
     background-color: darken($color: darkgray, $amount: 10);
   }
